# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("../ts.gni")
if (use_wasm) {
} else {
}
if (use_wasm) {
  source_set("proto_services_cpp") {
    sources = [
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/compaction.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/compaction.pb.h",
    ]
    include_dirs = [
      "//third_party/protobuf/src",
      "//src/include",
    ]
  }
} else {
  shared_library("proto_services_cpp") {
    sources = [
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/compaction.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/compaction.pb.h",
    ]
    include_dirs = [
      "//third_party/protobuf/src",
      "//src/include",
    ]
  }
}
if (use_wasm) {
  source_set("ftrace_data_cpp") {
    sources = [
      "${OHOS_PROTO_GEN}/services/common_types.pb.cc",
      "${OHOS_PROTO_GEN}/services/common_types.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/binder.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/binder.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/block.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/block.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/cgroup.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/cgroup.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/clk.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/clk.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/cpuhp.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/cpuhp.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/dma_fence.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/dma_fence.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/ext4.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/ext4.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/filelock.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/filelock.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/filemap.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/filemap.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/ftrace.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/ftrace.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/ftrace_event.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/ftrace_event.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/gpio.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/gpio.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/i2c.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/i2c.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/ipi.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/ipi.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/irq.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/irq.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/kmem.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/kmem.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/net.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/net.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/oom.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/oom.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/pagemap.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/pagemap.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/power.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/power.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/printk.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/printk.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/raw_syscalls.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/raw_syscalls.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/rcu.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/rcu.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/sched.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/sched.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/signal.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/signal.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/sunrpc.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/sunrpc.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/task.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/task.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/timer.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/timer.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/trace_plugin_result.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/trace_plugin_result.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/v4l2.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/v4l2.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/vmscan.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/vmscan.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/workqueue.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/workqueue.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/writeback.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/writeback.pb.h",
    ]
    include_dirs = [
      "//third_party/protobuf/src",
      "//src/include",
    ]
  }
} else {
  shared_library("ftrace_data_cpp") {
    sources = [
      "${OHOS_PROTO_GEN}/services/common_types.pb.cc",
      "${OHOS_PROTO_GEN}/services/common_types.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/binder.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/binder.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/block.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/block.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/cgroup.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/cgroup.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/clk.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/clk.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/cpuhp.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/cpuhp.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/dma_fence.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/dma_fence.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/ext4.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/ext4.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/filelock.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/filelock.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/filemap.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/filemap.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/ftrace.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/ftrace.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/ftrace_event.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/ftrace_event.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/gpio.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/gpio.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/i2c.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/i2c.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/ipi.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/ipi.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/irq.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/irq.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/kmem.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/kmem.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/net.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/net.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/oom.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/oom.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/pagemap.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/pagemap.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/power.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/power.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/printk.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/printk.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/raw_syscalls.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/raw_syscalls.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/rcu.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/rcu.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/sched.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/sched.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/signal.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/signal.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/sunrpc.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/sunrpc.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/task.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/task.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/timer.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/timer.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/trace_plugin_result.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/trace_plugin_result.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/v4l2.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/v4l2.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/vmscan.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/vmscan.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/workqueue.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/workqueue.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/writeback.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/writeback.pb.h",
    ]
    include_dirs = [
      "//third_party/protobuf/src",
      "//src/include",
    ]
  }
}
if (use_wasm) {
  source_set("memory_data_cpp") {
    sources = [
      "${OHOS_PROTO_GEN}/types/plugins/memory_data/memory_plugin_common.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/memory_data/memory_plugin_common.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/memory_data/memory_plugin_config.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/memory_data/memory_plugin_config.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/memory_data/memory_plugin_result.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/memory_data/memory_plugin_result.pb.h",
    ]
    include_dirs = [
      "//third_party/protobuf/src",
      "//src/include",
    ]
  }
} else {
  shared_library("memory_data_cpp") {
    sources = [
      "${OHOS_PROTO_GEN}/types/plugins/memory_data/memory_plugin_common.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/memory_data/memory_plugin_common.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/memory_data/memory_plugin_config.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/memory_data/memory_plugin_config.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/memory_data/memory_plugin_result.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/memory_data/memory_plugin_result.pb.h",
    ]
    include_dirs = [
      "//third_party/protobuf/src",
      "//src/include",
    ]
  }
}
if (use_wasm) {
  source_set("hilog_data_cpp") {
    sources = [
      "${OHOS_PROTO_GEN}/types/plugins/hilog_data/hilog_plugin_result.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/hilog_data/hilog_plugin_result.pb.h",
    ]
    include_dirs = [
      "//third_party/protobuf/src",
      "//src/include",
    ]
  }
} else {
  shared_library("hilog_data_cpp") {
    sources = [
      "${OHOS_PROTO_GEN}/types/plugins/hilog_data/hilog_plugin_result.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/hilog_data/hilog_plugin_result.pb.h",
    ]
    include_dirs = [
      "//third_party/protobuf/src",
      "//src/include",
    ]
  }
}

if (use_wasm) {
  source_set("native_hook_cpp") {
    sources = [
      "${OHOS_PROTO_GEN}/types/plugins/native_hook/native_hook_config.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/native_hook/native_hook_config.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/native_hook/native_hook_result.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/native_hook/native_hook_result.pb.h",
    ]
    include_dirs = [
      "//third_party/protobuf/src",
      "//src/include",
    ]
  }
} else {
  shared_library("native_hook_cpp") {
    sources = [
      "${OHOS_PROTO_GEN}/types/plugins/native_hook/native_hook_config.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/native_hook/native_hook_config.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/native_hook/native_hook_result.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/native_hook/native_hook_result.pb.h",
    ]
    include_dirs = [
      "//third_party/protobuf/src",
      "//src/include",
    ]
  }
}

if (use_wasm) {
  source_set("hidump_data_cpp") {
    sources = [
      "${OHOS_PROTO_GEN}/types/plugins/hidump_data/hidump_plugin_config.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/hidump_data/hidump_plugin_config.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/hidump_data/hidump_plugin_result.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/hidump_data/hidump_plugin_result.pb.h",
    ]
    include_dirs = [
      "//third_party/protobuf/src",
      "//src/include",
    ]
  }
} else {
  shared_library("hidump_data_cpp") {
    sources = [
      "${OHOS_PROTO_GEN}/types/plugins/hidump_data/hidump_plugin_config.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/hidump_data/hidump_plugin_config.pb.h",
      "${OHOS_PROTO_GEN}/types/plugins/hidump_data/hidump_plugin_result.pb.cc",
      "${OHOS_PROTO_GEN}/types/plugins/hidump_data/hidump_plugin_result.pb.h",
    ]
    include_dirs = [
      "//third_party/protobuf/src",
      "//src/include",
    ]
  }
}
