# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../build/ts.gni")
ohos_source_set("hiperf_parser_src") {
  subsystem_name = "trace_streamer"
  part_name = "hiperf_parser_src"
  sources = [ "perf_data_parser.cpp" ]
  include_dirs = [
    "${THIRD_PARTY}/hiperf/include/nonlinux/linux",
    ".",
    "../../base",
    "../../cfg",
    "${THIRD_PARTY}/hiperf/include/nonlinux",
    "${THIRD_PARTY}/hiperf/include",
    "../../include",
    "../../",
    "../../filter",
    "../../trace_data",
    "..",
    "../htrace_parser",
    "../../trace_streamer",
    "${THIRD_PARTY}/sqlite/include",
    "${OHOS_PROTO_GEN}/types/plugins/memory_data",
    "${THIRD_PARTY}/protobuf/src",
    "${THIRD_PARTY}/perf_include",
    "${THIRD_PARTY}/perf_include/libbpf",
  ]
  include_dirs += [ "${THIRD_PARTY}/libunwind/include" ]

  if (enable_ts_utest && !use_wasm) {
    cflags = [
      "-fprofile-arcs",
      "-ftest-coverage",
    ]
    ldflags = [
      "-fprofile-arcs",
      "-ftest-coverage",
      "--coverage",
    ]
    if (is_test) {
      cflags += [ "-D IS_UT" ]
    }
  }
}

group("hiperf_parser") {
  deps = [
    ":hiperf_parser_src",
    "${THIRD_PARTY}/hiperf:hiperf",
    "${THIRD_PARTY}/protobuf:protobuf",
    "${THIRD_PARTY}/protobuf:protobuf_lite",
  ]
  if (target != "test" && !is_openharmony) {
    deps += [ "${PREBUILTS}/protos:ts_proto_data_cpp" ]
  }
}
