# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../build/ohos.gni")

import("../../../build/ts.gni")
ohos_source_set("base_tables") {
  subsystem_name = "trace_streamer"
  part_name = "table"
  sources = [
    "args_table.cpp",
    "args_table.h",
    "data_dict_table.cpp",
    "data_dict_table.h",
    "data_type_table.cpp",
    "data_type_table.h",
    "datasource_clockid_table.cpp",
    "datasource_clockid_table.h",
    "meta_table.cpp",
    "meta_table.h",
    "range_table.cpp",
    "range_table.h",
    "span_join.cpp",
    "span_join.h",
    "stat_table.cpp",
    "stat_table.h",
    "symbols_table.cpp",
    "symbols_table.h",
    "table_base.cpp",
    "table_base.h",
    "trace_config_table.cpp",
    "trace_config_table.h",
  ]
  include_dirs = [
    "${THIRD_PARTY}/sqlite/include",
    "${SRC}/base",
    "../../parser",
    "${SRC}/trace_data",
    "${SRC}/include",
    "${SRC}",
    "${OHOS_PROTO_GEN}/types/plugins/memory_data",
    "${THIRD_PARTY}/protobuf/src",
  ]

  if (enable_ts_utest && !use_wasm) {
    cflags = [
      "-fprofile-arcs",
      "-ftest-coverage",
    ]
    ldflags = [
      "-fprofile-arcs",
      "-ftest-coverage",
      "--coverage",
    ]
    if (is_test) {
      cflags += [ "-D IS_UT" ]
    }
  }
}
