# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

import("//src/ts.gni")
ohos_source_set("ebpf_tables") {
  subsystem_name = "trace_streamer"
  part_name = "table"
  sources = [
    "bio_latency_sample_table.cpp",
    "bio_latency_sample_table.h",
    "ebpf_callstack_table.cpp",
    "ebpf_callstack_table.h",
    "file_system_sample_table.cpp",
    "file_system_sample_table.h",
  ]

  if (with_ebpf_help_table) {
    sources += [
      "ebpf_elf_symbol_table.cpp",
      "ebpf_elf_symbol_table.h",
      "ebpf_elf_table.cpp",
      "ebpf_elf_table.h",
      "ebpf_process_maps_table.cpp",
      "ebpf_process_maps_table.h",
    ]
  }
  include_dirs = [
    "../base",
    "//third_party/sqlite/include",
    "../../../src/base",
    "../../parser",
    "../../../src/trace_data",
    "../../../src/include",
    "../../../src",
    "${OHOS_PROTO_GEN}/types/plugins/memory_data",
    "//third_party/protobuf/src",
  ]

  if (enable_ts_utest && !use_wasm) {
    cflags = [
      "-fprofile-arcs",
      "-ftest-coverage",
    ]
    ldflags = [
      "-fprofile-arcs",
      "-ftest-coverage",
      "--coverage",
    ]
    if (is_test) {
      cflags += [ "-D IS_UT" ]
    }
  }
}
