# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../build/ohos.gni")

import("../../ts.gni")
ohos_source_set("ftrace_tables") {
  subsystem_name = "trace_streamer"
  part_name = "table"
  sources = [
    "callstack_table.cpp",
    "callstack_table.h",
    "clk_event_filter_table.cpp",
    "clk_event_filter_table.h",
    "clock_event_filter_table.cpp",
    "clock_event_filter_table.h",
    "clock_snapshot_table.cpp",
    "clock_snapshot_table.h",
    "cpu_measure_filter_table.cpp",
    "cpu_measure_filter_table.h",
    "filter_table.cpp",
    "filter_table.h",
    "frame_maps_table.cpp",
    "frame_maps_table.h",
    "frame_slice_table.cpp",
    "frame_slice_table.h",
    "gpu_slice_table.cpp",
    "gpu_slice_table.h",
    "instants_table.cpp",
    "instants_table.h",
    "irq_table.cpp",
    "irq_table.h",
    "measure_filter_table.cpp",
    "measure_filter_table.h",
    "measure_table.cpp",
    "measure_table.h",
    "process_filter_table.cpp",
    "process_filter_table.h",
    "process_measure_filter_table.cpp",
    "process_measure_filter_table.h",
    "process_table.cpp",
    "process_table.h",
    "raw_table.cpp",
    "raw_table.h",
    "sched_slice_table.cpp",
    "sched_slice_table.h",
    "system_call_table.cpp",
    "system_call_table.h",
    "system_event_filter_table.cpp",
    "system_event_filter_table.h",
    "thread_filter_table.cpp",
    "thread_filter_table.h",
    "thread_state_table.cpp",
    "thread_state_table.h",
    "thread_table.cpp",
    "thread_table.h",
  ]

  include_dirs = [
    "../base",
    "${THIRD_PARTY}/sqlite/include",
    "${SRC}/base",
    "../../parser",
    "${SRC}/trace_data",
    "${SRC}/include",
    "${SRC}",
    "${OHOS_PROTO_GEN}/types/plugins/memory_data",
    "${THIRD_PARTY}/protobuf/src",
  ]

  if (enable_ts_utest && !use_wasm) {
    cflags = [
      "-fprofile-arcs",
      "-ftest-coverage",
    ]
    ldflags = [
      "-fprofile-arcs",
      "-ftest-coverage",
      "--coverage",
    ]
    if (is_test) {
      cflags += [ "-D IS_UT" ]
    }
  }
}
